# flaskoni

./: Makefile  Procfile  pyproject.toml
package/: crud.py  example.py  form_test.py  post_form.py  server.py
package/data/: users.txt
package/scripts/: hexlet_python_package.py
package/templates/users/: edit.html  index.html  login.html  new.html  show.html
tests/: test_users.py
