[tool.poetry]
name = "hexlet-python-package"
version = "0.3.0"
description = "try"
authors = ["AlexeyLearning <alexeylearning@gmail.com>"]
packages = [
  { include = "package" },
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
flask-session = "^0.4.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
wemake-python-styleguide = "^0.17.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
hexlet-python-package = "hexlet_python_package.scripts.hexlet_python_package:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
